--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ subjects:
 - !lcsh 'Evolution (Biology) -- Wit and humor'
 - !lcsh 'American wit and humor'
 - !lcc 'PS'
+- GITenberg
 title: This Simian World
 url: http://www.gutenberg.org/ebooks/26260
